@@ -1,3 +1,9 @@
+2007-02-20  Akim Demaille  <demaille@gostai.com>
+
+	find0
+	* containers.hh, containers.hxx (find0): New.
+	(for_each): Scope reduction.
+
 2007-02-19  Akim Demaille  <akim.demaille@free.fr>
 
 	* containers.hh, containers.hxx (libport::mhas): New.
